# python-template

./: AGENTS.PROJECT.md  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
.agents/: README.md
scripts/: agents-init.ps1  agents-init.sh  agents-update.ps1  agents-update.sh
tests/: test_package_imports.py
