[build-system]
requires = ["setuptools>=65", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[project]
name = "python-template"
description = "A Python project template"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Tristan R. Brown", email = "brown.tristan.r@gmail.com" },
]
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.4",
]

[project.urls]
Repository = "https://github.com/tristanbrown/python-template"

[tool.setuptools_scm]

[tool.pytest.ini_options]
addopts = "-ra"
filterwarnings = [
    "error::DeprecationWarning",
]
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"
